--- a/Projekt_FB/MainWindow.xaml
+++ b/Projekt_FB/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
     <Grid>
-        <Grid x:Name="mainMenu" Visibility="Hidden">
+        <Grid x:Name="mainMenu" >
             <Image HorizontalAlignment="Left" Height="816" VerticalAlignment="Top" Width="1390" Source="/405614-most-popular-kids-background-2799x1429-for-android.jpg"/>
         <Button x:Name="paintingButton" HorizontalAlignment="Left" Margin="100,532,0,0" VerticalAlignment="Top" Height="128" Width="256" Click="paintingButton_Click">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -59,7 +59,7 @@
         </Label>
 
     </Grid>
-        <Grid x:Name="fairyTalesMenu" >
+        <Grid x:Name="fairyTalesMenu" Visibility="Hidden">
             <Grid.RowDefinitions>
                 <!-- Definicja wierszy -->
                 <RowDefinition Height="Auto"/>
@@ -82,7 +82,11 @@
                 <Image Source="/mickeyMouseHouse.png" Width="100" Height="100"/>
                 <TextBlock Text="Nowy domek myszki" Width="200" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"/>
                 <TextBlock Text="7:41" Width="150" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
-                <Button Content="Odtwórz" Width="100" Click="Button_Click"/>
+                <Button Content="" Width="100" Click="Button_Click">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/playButton.jpg"/>
+                    </Button.Background>
+                </Button>
                 <!--Slider x:Name="slider" Width="710" VerticalAlignment="Center" ValueChanged="slider_ValueChanged"/ -->
             </StackPanel>
 
@@ -90,7 +94,11 @@
                 <Image Source="/forestCar.jpg" Width="100" Height="100"/>
                 <TextBlock Text="Leśny Samochodzik" Width="200" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"/>
                 <TextBlock Text="8:22" Width="150" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
-                <Button x:Name="lesnySamochodzikButton" Content="Odtwórz" Width="100" Click="lesnySamochodzikButton_Click" />
+                <Button x:Name="lesnySamochodzikButton" Content="" Width="100" Click="lesnySamochodzikButton_Click" >
+                    <Button.Background>
+                    <ImageBrush ImageSource="/playButton.jpg"/>
+                    </Button.Background>
+                </Button>
             </StackPanel>
 
 
